correct selector for menu spacing

--- a/gbc_theme/style.css
+++ b/gbc_theme/style.css
@@ -1143,7 +1143,7 @@ footer {
     width: 8rem;
     padding: 0;
   }
-  #primary-menu .mdl-layout__header-row .mdl-navigation {
+  .mdl-layout__header-row .mdl-navigation {
     padding-right: 3.4em;
   }
   .sub-menu li {
